<resources>
    <string name="app_name">NewsApp</string>
    <string name="home">Home</string>
    <string name="bookmark">Bookmark</string>
    <string name="title">Title</string>
    <string name="published_date">Published Date</string>
    <string name="save_bookmark">Save Bookmark?</string>
    <string name="source">source</string>
    <string name="author">author</string>
    <string name="publish_date">publish date</string>
    <string name="description">Description</string>
    <string name="content">Content</string>
    <string name="my_profile">My Profile</string>
    <string name="hyperlink">My Github\n<a href="https://github.com/NeoRevolt">NeoRevolt</a></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dzalfikri_ali_zidan">Dzalfikri Ali Zidan</string>
</resources>